@@ -1,16 +1,16 @@
 package org.emerald.apifirst.apifirstserver.controllers;
 
-import org.emerald.apifirst.model.CategoryDto;
 import org.emerald.apifirst.model.DimensionsDto;
 import org.emerald.apifirst.model.ImageDto;
-import org.emerald.apifirst.model.ProductDto;
-import org.junit.jupiter.api.DisplayName;
+import org.emerald.apifirst.model.ProductCreateDto;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
 
-import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
+import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThan;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
@@ -19,39 +19,16 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @SpringBootTest
-public class ProductControllerTest extends BaseTest {
+class ProductControllerTest extends BaseTest {
 
-    @DisplayName("Test list products")
-    @Test
-    void testListProducts() throws Exception {
-        mockMvc.perform(get(ProductController.BASE_URL)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()", greaterThan(0)));
-    }
-
-
-    @DisplayName("Get product by id")
-    @Test
-    void testGetProductById() throws Exception {
-        mockMvc.perform(get(ProductController.BASE_URL + "/{productId}", testProduct.getId())
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(testProduct.getId().toString()));
-    }
-
-    @DisplayName("Create product")
     @Test
     void testCreateProduct() throws Exception {
-        ProductDto newProduct = ProductDto.builder()
+        ProductCreateDto newProduct = ProductCreateDto.builder()
                 .description("New Product")
                 .cost("5.00")
                 .price("8.95")
-                .categories(Arrays.asList(CategoryDto.builder()
-                        .category("New Category")
-                        .description("New Category Description")
-                        .build()))
-                .images(Arrays.asList(ImageDto.builder()
+                .categories(List.of("ELECTRONICS"))
+                .images(Collections.singletonList(ImageDto.builder()
                         .url("http://example.com/image.jpg")
                         .altText("Image Alt Text")
                         .build()))
@@ -67,5 +44,22 @@ public class ProductControllerTest extends BaseTest {
                         .content(objectMapper.writeValueAsString(newProduct)))
                 .andExpect(status().isCreated())
                 .andExpect(header().exists("Location"));
+
+    }
+
+    @Test
+    void listProducts() throws Exception {
+        mockMvc.perform(get(ProductController.BASE_URL)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.length()", greaterThan(0)));
+    }
+
+    @Test
+    void getProductById() throws Exception {
+        mockMvc.perform(get(ProductController.BASE_URL + "/{productId}", testProduct.getId())
+                        .accept(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id", equalTo(testProduct.getId().toString())));
     }
 }
